Fix issue with unchanged login info when connecting to new Web Terminal after a previous connection on the VM Management page in AdminWeb2

--- a/api-runtime/rest-runtime/admin-web/html/vm.html
+++ b/api-runtime/rest-runtime/admin-web/html/vm.html
@@ -1790,6 +1790,9 @@ THE SOFTWARE.
             sshOverlay.querySelector('p').textContent = `Connect to ${vmInfo.vmUserId}@${vmInfo.publicIP}`;
             sshOverlay.querySelector('#terminal').style.display = 'none';
             sshOverlay.querySelector('#ssh-form').style.display = 'block';
+            sshOverlay.querySelector('button[onclick^="connectSSH"]').onclick = function() {
+                connectSSH(vmInfo.vmUserId, vmInfo.publicIP);
+            };
         }
 
         sshOverlay.style.display = 'flex';
@@ -1830,7 +1833,6 @@ THE SOFTWARE.
 
         term.open(terminalDiv);
         terminalDiv._initialized = true;
-
         const socket = new WebSocket("ws://" + location.host + "/spider/adminweb/sshwebterminal/ws?user=" + encodeURIComponent(user) + "&ip=" + encodeURIComponent(ip) + "&privatekey=" + encodeURIComponent(privateKey));
 
         socket.onopen = function() {
