Refine auto generated vm name when single vm. and Improve Tags + button format

--- a/api-runtime/rest-runtime/admin-web/html/disk.html
+++ b/api-runtime/rest-runtime/admin-web/html/disk.html
@@ -202,8 +202,10 @@
     .add-btn-container {
         margin-top: 5px;
     }
-    .add-btn {
+    .add-btn-container .add-btn {
         background-color: transparent;
+        font-size: 14px;
+        font-weight: bold;
         border: none;
         color: blue;
         text-decoration: underline;
