Align Tag input width of All Pages

--- a/api-runtime/rest-runtime/admin-web/html/disk.html
+++ b/api-runtime/rest-runtime/admin-web/html/disk.html
@@ -268,6 +268,7 @@
         flex: 2;
     }
     .tag-input-group input {
+        width:60px;
         flex: 0.5;
         margin-right: 5px;
     }
