--- a/api-runtime/rest-runtime/admin-web/html/keypair.html
+++ b/api-runtime/rest-runtime/admin-web/html/keypair.html
@@ -269,6 +269,7 @@
         flex: 2;
     }
     .tag-input-group input {
+        width: 80px;
         flex: 0.5;
         margin-right: 5px;
     }
