--- a/api-runtime/rest-runtime/admin-web/html/security-group.html
+++ b/api-runtime/rest-runtime/admin-web/html/security-group.html
@@ -195,6 +195,7 @@
         flex: 2;
     }
     .tag-input-group input {
+        width: 100px;
         flex: 0.5;
         margin-right: 5px;
     }
