--- a/api-runtime/rest-runtime/admin-web/html/vpc-subnet.html
+++ b/api-runtime/rest-runtime/admin-web/html/vpc-subnet.html
@@ -195,6 +195,12 @@
         flex: 2;
     }
     .tag-input-group input {
+        width: 100px;
+        flex: 0.5;
+        margin-right: 5px;
+    }
+    .add-tag-input-group input {
+        width: 100px;
         flex: 0.5;
         margin-right: 5px;
     }
@@ -394,10 +400,13 @@
         white-space: nowrap;
     }
     .inner-table button.plus-btn {
-        width: 20px;
-        font-size: 12px;
+        background-color: transparent;
+        font-size: 14px;
         font-weight: bold;
-        white-space: nowrap;
+        border: none;
+        color: blue;
+        text-decoration: underline;
+        cursor: pointer;
     }
     .inner-table .name-column {
         width: 20%;
