--- a/api-runtime/rest-runtime/admin-web/html/vm.html
+++ b/api-runtime/rest-runtime/admin-web/html/vm.html
@@ -242,6 +242,7 @@ THE SOFTWARE.
         flex: 2;
     }
     .tag-input-group input {
+        width: 100px;
         flex: 0.5;
         margin-right: 5px;
     }
