Add MyImage Management Page for AdminWeb2

--- a/api-runtime/rest-runtime/admin-web/html/disk.html
+++ b/api-runtime/rest-runtime/admin-web/html/disk.html
@@ -268,7 +268,7 @@
         flex: 2;
     }
     .tag-input-group input {
-        width:60px;
+        width: 60px;
         flex: 0.5;
         margin-right: 5px;
     }
@@ -478,13 +478,13 @@
         <table id="disk-table">
             <tr>
                 <th class="column-num">#</th>
-                <th class="center-align disk-name-cell">Name</th>
+                <th class="center-align disk-name-cell" style="text-align: center;">Name</th>
                 <th class="center-align zone-column">Zone</th>
                 <th class="center-align type-column">Type</th>
                 <th class="center-align size-upsize-column">Size (GB) | Upsize</th>
                 <th class="center-align status-actions-column">Status | Actions</th>
-                <th class="center-align tags-column">Tags</th>
-                <th class="center-align misc-column">Misc</th>
+                <th class="center-align tags-column" style="text-align: center;">Tags</th>
+                <th class="center-align misc-column" style="text-align: center;">Misc</th>
                 <th class="check-column">
                     <input type="checkbox" onclick="toggleSelectAll(this)">
                 </th>
